Fixed float overflow

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -158,14 +158,17 @@ a:hover {
         width: 90%;
         position: relative;
         float: none;
-        margin: 1% auto 12% auto;
+        margin: 1% auto 1% auto;
     }
     main {
+        clear: both;
         position: relative;
         float: none;
         margin: 0 auto 0 auto;
     }
+    main 
     .portfolio article img {
         width: 90%;
+        min-width: 128px;
     }
 }
